fixed width issue on small devices

--- a/css/index.css
+++ b/css/index.css
@@ -25,8 +25,8 @@ body {
     padding-top: 15px;
   }
 
-  .grid-updates h6 {
-    font-size: 30px;
+  #grid-updates-container h6{
+    font-size: 16px;
   }
 
   /* MEDIA */
@@ -36,7 +36,22 @@ body {
     }
   }
 
+  @media(min-width: 440px){
+    #grid-updates-container h6{
+      font-size: 30px;
+    }
+  }
+
   @media(min-width: 768px) {
+    iframe {
+      transform: scale(0.6);
+      transform-origin: top;
+    }
+
+    #grid-updates-container h6{
+      font-size: 20px;
+    }
+
     .grid-updates {
       padding: 1em;
       display: grid;
@@ -112,9 +127,10 @@ body {
       grid-gap: 0.6em;
       justify-items: stretch;
     }
-    .grid-updates h6 {
-      font-size: 16px;
+    #grid-updates-container h6{
+      font-size: 15px;
     }
+    
     #grid-updates h4 {
       display: inline;
     }
@@ -157,6 +173,14 @@ body {
     background-size: cover; 
     border-bottom: 3px solid black;
     margin-bottom: 0;
+    object-fit: cover;
+  }
+
+  #bg-video-overlay > video{
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.4);
+    object-fit: cover;
   }
 
   @font-face {
@@ -182,7 +206,7 @@ body {
     width: auto;
     height: 100vh;
     color: white;
-    background: rgba(0, 0, 0, 0.4);
+    
     height: 92vh;
   }
 
@@ -241,6 +265,7 @@ body {
     background-color: #A32C24;
     border-top: 2px solid black;
     border-bottom: 2px solid black;
+    text-align: center;
   }
 
   #video-update h3{
@@ -303,7 +328,7 @@ body {
 
   /* Order */
   #order{
-    padding-top: 22px;
+    padding-top: 50px;
     padding-bottom: 15px;
   }
 
@@ -312,6 +337,8 @@ body {
     color: white;
     background: transparent;
     border-color: #E5AE11;
+    margin-top: 10px;
+    margin-bottom: 10px;
   }
 
   #order .btn:hover{
